--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,22 @@
 spring.application.name=url-shortener
 server.port=8080
 
+# JWT KEYS
+jwt.public.key=classpath:public_key.pem
+jwt.private.key=classpath:private_key.pem
+
+# ADMIN USER CREDENTIALS
+admin.email=admin@gmail.com
+admin.password=admin
+
+# JavaMailSender CONFIGURATION
+spring.mail.host=<host>
+spring.mail.port=<port>
+spring.mail.username=<username>
+spring.mail.password=<password>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/url_db
